--- a/rebar.config
+++ b/rebar.config
@@ -2,15 +2,9 @@
 %% -*- tab-width: 4;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ts=4 sw=4 ft=erlang et
 
-{deps,
-[
+{deps, [
    {proper, ".*", {git, "git://github.com/manopapad/proper.git", "master"}}
 ]}.
-
-%% Use edown to render a markdown version of edoc. The generated
-%% markdown can be checked in and will be browsable on github. The
-%% default is to add edown as a dev only dependency and to enable
-%% it. You can set this to false to do your own thing.
 
 {use_edown,     true}.
 {cover_enabled, true}.
@@ -23,4 +17,4 @@
 {xref_checks,   [ undefined_function_calls, undefined_functions,       locals_not_used,
                   exports_not_used,         deprecated_function_calls, deprecated_functions ] }.
 
-{edoc_opts,     [ {todo, true} }.
+{edoc_opts,     [ {todo, true} ].
